Fix pagination breaks on small screens
Add flex-wrap to pagination class for smaller screens projectblacklight/blacklight#2072

--- a/app/assets/stylesheets/blacklight/_pagination.scss
+++ b/app/assets/stylesheets/blacklight/_pagination.scss
@@ -4,3 +4,9 @@
   padding: $input-btn-padding-y $input-btn-padding-x;
   padding-left: 0;
 }
+
+.pagination {
+  @media (max-width: breakpoint-max(sm)) {
+    flex-wrap: wrap;
+  }
+}
